# 3ASRI-ProjetIntegration

./: .gitignore  README.md  dump.txt
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin
devel/.private/motoman_gp165r_support/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/motoman_gp20hl_support/: .catkin  setup.sh
devel/.private/motoman_gp215_support/: .catkin  .rosinstall  setup.sh
devel/.private/motoman_gp225_support/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/motoman_gp250_support/: .catkin  local_setup.sh  setup.sh
devel/.private/motoman_gp8l_support/: .catkin  .rosinstall
devel/.private/motoman_ma2010_moveit_config/: .catkin
devel/.private/motoman_motopos_mh1655_support/: .catkin  .rosinstall
devel/.private/motoman_mpx1950_support/: .catkin
devel/.private/motoman_ms210_moveit_config/: .catkin
devel/.private/motoman_sda10f_moveit_config/: .catkin
devel/.private/motoman_sia20d_moveit_config/: .catkin
src/gen_traj/: CMakeLists.txt  gen_traj.py  package.xml
src/hc10_moveit_config/: .setup_assistant  dump.txt  package.xml
src/motoman/motoman_sda10f_support/: CMakeLists.txt
src/motoman/motoman_sda10f_support/config/: csda10f_motion_interface.yaml
src/motoman/motoman_sda10f_support/launch/: load_csda10f.launch  robot_interface_streaming_csda10f.launch  robot_state_visualize_csda10f.launch  test_csda10f.launch
src/motoman/motoman_sda10f_support/test/: launch_test_csda10f.xml
src/motoman/motoman_sda10f_support/urdf/: csda10f.xacro  csda10f_arm_macro.xacro  csda10f_macro.xacro
(+145 files in other folders)
